--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -10,7 +10,7 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView2"
         android:layout_width="wrap_content"
-        android:layout_height="350dp"
+        android:layout_height="370dp"
         app:cardCornerRadius="20dp"
         app:cardElevation="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -29,61 +29,67 @@
             <EditText
                 android:id="@+id/edtUsername"
                 android:layout_width="250dp"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
                 android:layout_margin="20dp"
                 android:background="@drawable/txt_bg"
-                android:hint="Username"
+                android:hint="@string/username"
+                android:inputType="text"
                 android:padding="10dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0" />
+                app:layout_constraintVertical_bias="0"
+                android:autofillHints="username" />
 
 
             <EditText
                 android:id="@+id/edtSignupEmail"
                 android:layout_width="250dp"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
                 android:layout_margin="20dp"
                 android:background="@drawable/txt_bg"
-                android:hint="Email"
+                android:hint="@string/email"
                 android:padding="10dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@id/edtUsername"
                 app:layout_constraintStart_toStartOf="@id/edtUsername"
                 app:layout_constraintTop_toBottomOf="@id/edtUsername"
-                app:layout_constraintVertical_bias="0" />
+                app:layout_constraintVertical_bias="0"
+                android:autofillHints="Email"
+                android:inputType="textEmailAddress" />
 
             <EditText
                 android:id="@+id/edtSignupPass"
                 android:layout_width="250dp"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
                 android:layout_margin="20dp"
                 android:background="@drawable/txt_bg"
-                android:hint="Password"
-                android:inputType="numberPassword"
+                android:hint="@string/password"
+                android:inputType="textPassword"
                 android:padding="10dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@+id/edtSignupEmail"
                 app:layout_constraintStart_toStartOf="@+id/edtSignupEmail"
                 app:layout_constraintTop_toBottomOf="@+id/edtSignupEmail"
-                app:layout_constraintVertical_bias="0" />
+                app:layout_constraintVertical_bias="0"
+                android:autofillHints="Password" />
 
             <EditText
                 android:id="@+id/edtSignupConfirmPass"
                 android:layout_width="250dp"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
                 android:layout_margin="20dp"
                 android:background="@drawable/txt_bg"
-                android:hint="Confirm Password"
-                android:inputType="numberPassword"
+                android:hint="@string/confirm_password"
+                android:inputType="textPassword"
                 android:padding="10dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@+id/edtSignupPass"
                 app:layout_constraintStart_toStartOf="@+id/edtSignupPass"
                 app:layout_constraintTop_toBottomOf="@+id/edtSignupPass"
-                app:layout_constraintVertical_bias="0" />
+                app:layout_constraintVertical_bias="0"
+                android:autofillHints="Confirm Password" />
 
             <Button
                 android:id="@+id/btnSignup"
@@ -91,7 +97,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="20dp"
                 android:layout_marginBottom="10dp"
-                android:text="Signup"
+                android:text="@string/signup"
                 android:textColor="@color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@+id/edtSignupConfirmPass"
