--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -44,10 +44,9 @@
         android:id="@+id/ivFacebookRegister"
         android:layout_width="40dp"
         android:layout_height="40dp"
+        android:layout_marginEnd="100dp"
         android:contentDescription="@string/facebook_register"
         android:src="@drawable/logo_facebook"
-        app:layout_constraintHorizontal_bias="0"
-        android:layout_marginStart="50dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/viewPager"
         app:layout_constraintStart_toStartOf="parent"
@@ -57,6 +56,7 @@
         android:id="@+id/ivTwitterRegister"
         android:layout_width="50dp"
         android:layout_height="50dp"
+        android:layout_marginStart="100dp"
         android:contentDescription="@string/twitter_register"
         android:src="@drawable/logo_twitter"
         app:layout_constraintBottom_toBottomOf="@+id/ivFacebookRegister"
@@ -64,31 +64,16 @@
         app:layout_constraintStart_toStartOf="@+id/viewPager"
         app:layout_constraintTop_toTopOf="@+id/ivFacebookRegister" />
 
-    <ImageView
-        android:id="@+id/ivMicrosoftRegister"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="50dp"
-        android:contentDescription="@string/microsoft_register"
-        android:src="@drawable/logo_ms"
-        app:layout_constraintBottom_toBottomOf="@+id/ivTwitterRegister"
-        app:layout_constraintEnd_toEndOf="@+id/viewPager"
-        app:layout_constraintHorizontal_bias="1"
-        app:layout_constraintStart_toStartOf="@+id/viewPager"
-        app:layout_constraintTop_toTopOf="@+id/ivTwitterRegister" />
-
     <com.facebook.login.widget.LoginButton
         android:id="@+id/logbtnFacebook"
         android:layout_width="40dp"
-        android:alpha="0"
         android:layout_height="wrap_content"
+        android:alpha="0"
         android:backgroundTint="@color/white"
-        app:layout_constraintHorizontal_bias="0"
-        android:layout_marginStart="50dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/viewPager" />
+        app:layout_constraintBottom_toBottomOf="@+id/ivFacebookRegister"
+        app:layout_constraintEnd_toEndOf="@+id/ivFacebookRegister"
+        app:layout_constraintStart_toStartOf="@+id/ivFacebookRegister"
+        app:layout_constraintTop_toTopOf="@+id/ivFacebookRegister" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
